# east-c

./: .gitignore  CLA.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  VERSION  docker-compose.yml  perf.data
.github/workflows/: publish-binaries.yml  publish-npm.yml  publish.yml  test.yml  update-deps.yml
scripts/: run_compliance.sh  run_leak_check.sh  run_profiler.sh
